[gd_scene load_steps=4 format=2]

[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/ImagePreview/ImageThumbnail.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://RaptorRender/GUI/fonts/Hack-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 2
font_data = SubResource( 1 )

[node name="ImageThumbnail" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1122.0
margin_bottom = -492.0
rect_min_size = Vector2( 158, 108 )
color = Color( 0.298039, 0.298039, 0.298039, 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="ImageTexture" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 104.0
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/ImageTexture"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
text = "Framenumber"
align = 1
valign = 1
clip_text = true

[node name="Button" type="Button" parent="MarginContainer/ImageTexture"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="button_down" from="MarginContainer/ImageTexture/Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="MarginContainer/ImageTexture/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/ImageTexture/Button" to="." method="_on_Button_mouse_exited"]
